test/parsing/ferguson/formal-list-starts-comma.chpl
proc foo(, x: int) { }

foo(1);
